# SynEPD

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  env.yaml  lint.sh  pyproject.toml  pytest.sh  release_v1.sqlite  run_server.sh
.github/workflows/: publish-package.yml  test-and-lint.yml
data/: hierarchy.md  polar.json  release-manifest.json  rxno_crosswalk.ttl
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  modules.rst  querying_guide.rst  synepd.construct.rst  synepd.core.rst  synepd.database.rst  synepd.precheck.rst  synepd.query.rst  synepd.rst  synepd.web.rst
docs/source/_static/: custom.css  custom.js
examples/: demo_predictor.py  query_demo.py
scripts/: build_rxno_mapping.py  compare_taxonomy_rxno.py
synepd/: __init__.py  io.py  models.py  render_epd_pdf.py
synepd/construct/: __init__.py  build_release_db.py  builder.py  checks.py  release_manifest.py
synepd/core/: __init__.py  data.py  export.py  graph_codec.py  ingest.py  mechanism.py  query.py  representation.py
synepd/database/: __init__.py  chem_db.py  core.py  managers.py  migrations.py  models.py  repository.py  sqlite.py
synepd/precheck/: __init__.py  check_atom_map.py  check_balance.py  check_epd_reaction_center.py  check_h_completion.py  check_unimolecular_arrow_order.py  epd_verification.py  report.py
synepd/query/: __init__.py  filters.py
synepd/web/: __init__.py  knowledge_graph.py  operations.py  server.py
synepd/web/static/: app.js  graph.js  index.html  kg.css  kg.js  style.css  taxonomy.html  tmap.html
test/: test_epd_verification.py  test_import.py  test_io.py  test_models.py
test/construct/: test_build_release_db.py  test_builder.py  test_checks.py  test_release_manifest.py
test/core/: test_data.py  test_export.py  test_graph_codec.py  test_ingest.py  test_mechanism.py  test_query.py  test_representation.py
test/database/: test_chem_db.py  test_core.py  test_database.py  test_database_models.py  test_managers.py  test_migrations.py  test_repository.py  test_sqlite.py  test_verify_db.py
test/precheck/: test_check_atom_map.py  test_check_balance.py  test_check_epd_reaction_center.py  test_check_h_completion.py  test_check_unimolecular_arrow_order.py  test_report.py
test/query/: test_filters.py
test/web/: test_enhancements.py  test_error_redaction.py  test_operations.py  test_server.py
