[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synepd"
version = "0.3.0"
description = "Hierarchical reaction templates"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi",
    "pydantic",
    "synkit==1.5.0",
    "synrfp>=0.0.3",
    "uvicorn",
    "networkx",
    "rdkit",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
scripts = [
    "tmap2==0.2.2",
]

[tool.setuptools.packages.find]
include = ["synepd*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra"
pythonpath = "."

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]
